--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
 install:
     - sudo apt-get install protobuf-compiler
     - sudo apt-get install -qq gcc-4.8 g++-4.8
+    - export CXX="g++-4.8"
     - sudo apt-get install libgtest-dev
     - cd /usr/src/gtest
     - sudo cmake .
