Try building the latest protobuf manually.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ before_install:
     - sudo apt-get update -qq
 
 install:
-    - sudo apt-get install libprotobuf-dev
-    - sudo apt-get install protobuf-compiler
+    - git clone https://github.com/google/protobuf.git
+    - cd protobuf && ./configure --prefix=/usr/ && make && sudo make install && cd ..
     - sudo apt-get install -qq gcc-4.8 g++-4.8
     - export CXX="g++-4.8"
     - sudo apt-get install libgtest-dev
