Add a script to run tests and capture their exit codes.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,12 +8,12 @@ LIBSHEEPSHEAD=../build/libsheepshead.a
 all: run
 
 valgrind: interface proto
-	@(for test_exe in $(ALL_TESTS); do valgrind --leak-check=full --log-file=./$$test_exe.valgrind ./$$test_exe; done)
+	VALGRIND="valgrind --leak-check=full --log-file=valgrind-%p.log" $(MAKE) run
 
 ALL_TESTS = $(INTERFACE_TESTS) $(PROTO_TESTS)
 
 run: interface proto
-	@(for test_exe in $(ALL_TESTS); do ./$$test_exe; done)
+	bash ./runtests.sh
 	
 # Build tests of the protocol buffer models
 PROTO_TEST_CCS=$(wildcard proto/*.cc)
@@ -42,4 +42,4 @@ $(INTERFACE_TESTS): $(INTERFACE_TEST_OBJS)
 clean:
 	rm -rf $(PROTO_TESTS) $(PROTO_TEST_OBJS)
 	rm -rf $(INTERFACE_TESTS) $(INTERFACE_TEST_OBJS)
-	find . -name "*.valgrind" | xargs rm -f
+	rm -f *.log
